--- a/style.css
+++ b/style.css
@@ -93,18 +93,13 @@ ul li.active a{
     transition: 1s;
 }
 
-/* .content{
-    display: block;
-    margin-top: 2em;
-    float: top;
-
-} */
 .right-col{
     float: right;
     margin-right: 5%;
-    margin-top:120px;
     display: flex;
     align-items: center;
+    height: 100%;
+    justify-content: flex-end;
 }
 .right-col p{
     font-size: 20px;
@@ -116,4 +111,15 @@ ul li.active a{
     width: 80px;
     cursor: pointer;
 
+}
+@media(max-width:991px){
+    .main{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    .information{
+        width: 100%;
+    }
 }
